removed jquery-ui

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,14 +1,17 @@
-SetEnv PHP_VER 5_TEST
-
-AddType video/ogg  .ogv
-AddType video/mp4  .mp4
-AddType video/webm .webm
-
-<IfModule mod_rewrite.c>
-    Options -MultiViews
-
-    RewriteEngine On
-    #RewriteBase /path/to/app
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ index.php [QSA,L]
+SetEnv PHP_VER 5_TEST
+
+AddType video/ogg  .ogv
+AddType video/mp4  .mp4
+AddType video/webm .webm
+AddType application/vnd.ms-fontobject .eot
+AddType font/ttf .ttf
+AddType font/otf .otf
+
+<IfModule mod_rewrite.c>
+    Options -MultiViews
+
+    RewriteEngine On
+    #RewriteBase /path/to/app
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^(.*)$ index.php [QSA,L]
 </IfModule>
