--- a/web/.htaccess
+++ b/web/.htaccess
@@ -6,6 +6,7 @@ AddType video/webm .webm
 AddType application/vnd.ms-fontobject .eot
 AddType font/ttf .ttf
 AddType font/otf .otf
+AddType text/cache-manifest .appcache
 
 <IfModule mod_rewrite.c>
     Options -MultiViews
@@ -15,4 +16,11 @@ AddType font/otf .otf
     #RewriteBase /path/to/app
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^(.*)$ index.php [QSA,L]
+</IfModule>
+
+<IfModule mod_setenvif.c>
+  <IfModule mod_headers.c>
+    BrowserMatch chromeframe gcf
+    Header append X-UA-Compatible "chrome=1" env=gcf
+  </IfModule>
 </IfModule>
