--- a/package.json
+++ b/package.json
@@ -7,17 +7,14 @@
         "test": "mocha --recursive"
     },
     "devDependencies": {
-        "grunt": "~0.4.2",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-copy": "~0.5.0",
-        "grunt-contrib-cssmin": "~0.9.0",
-        "grunt-contrib-requirejs": "~0.4.3",
-        "grunt-processhtml": "~0.3.3",
-        "grunt-mocha-test": "~0.10.0",
-        "grunt-uncss": "~0.3.3",
-        "load-grunt-tasks": "~0.4.0",
         "mocha": "~1.17.1",
         "should": "~3.1.3",
-        "time-grunt": "~0.3.1"
+		"gulp": "^3.6.2",
+        "gulp-concat": "^2.2.0",
+        "gulp-ember-handlebars": "^0.6.0",
+        "gulp-less": "^1.2.3",
+        "gulp-livereload": "^1.3.1",
+        "gulp-util": "^2.2.14",
+        "bower": "^1.3.5"
     }
 }
