--- a/web/bower.json
+++ b/web/bower.json
@@ -18,6 +18,7 @@
         "ember-i18n": "2.0.0",
         "bootstrap": "~3.1.1",
         "font-awesome": "~4.0.3",
-        "momentjs": "~2.6.0"
+        "momentjs": "~2.6.0",
+        "underscore": "1.5.2"
     }
 }
