--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "grunt-contrib-copy": "~0.5.0",
         "grunt-contrib-cssmin": "~0.9.0",
         "grunt-contrib-requirejs": "~0.4.3",
+        "grunt-contrib-uglify": "~0.5.1",
         "grunt-processhtml": "~0.3.3",
         "grunt-mocha-test": "~0.10.0",
         "grunt-uncss": "~0.3.3",
