--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "requirejs": "~2.1.20",
     "keymaster": "~1.6.3",
     "jquery-2.1.4": "http://code.jquery.com/jquery-2.1.4.js",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "i18n": "requirejs-i18n#~2.0.6"
   }
 }
