--- a/docker/config/nginx.conf
+++ b/docker/config/nginx.conf
@@ -4,6 +4,8 @@ server {
   access_log            /var/log/nginx/wallblog.access.log;
   error_log             /var/log/nginx/wallblog.error.log;
 
+  client_max_body_size 50M;
+
   root /var/www/wallblog/dist;
   index index.html;
 
@@ -19,11 +21,6 @@ server {
     fastcgi_read_timeout 3000;
     include fastcgi_params;
 
-    break;
-  }
-
-  location /pictures {
-    proxy_pass http://wallblog.jops-dev.com;
     break;
   }
 
