--- a/app/font/config.json
+++ b/app/font/config.json
@@ -31,6 +31,12 @@
       "src": "entypo"
     },
     {
+      "uid": "44199a54057e6e264fde61a49b034171",
+      "css": "upload",
+      "code": 59397,
+      "src": "entypo"
+    },
+    {
       "uid": "b90868gfogj970a1g0dnot6hm5r4uj55",
       "css": "comment",
       "code": 59395,
