--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "keymaster": "~1.6.3",
     "jquery-2.1.4": "http://code.jquery.com/jquery-2.1.4.js",
     "moment": "~2.10.6",
-    "i18n": "requirejs-i18n#~2.0.6"
+    "i18n": "requirejs-i18n#~2.0.6",
+    "hammerjs": "hammer.js#~2.0.4"
   }
 }
