--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "del": "^1.1.1",
     "gulp": "^3.9.0",
     "gulp-add-src": "^0.2.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.5.2",
     "gulp-connect": "^2.2.0",
     "gulp-cssmin": "^0.1.7",
