--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "test": "mocha --recursive"
   },
   "devDependencies": {
+    "babel-core": "^6.3.26",
+    "babel-preset-es2015": "^6.3.13",
     "bower": "*",
-    "connect-modrewrite": "^0.7.11",
     "del": "^1.1.1",
     "gulp": "^3.9.0",
     "gulp-add-src": "^0.2.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.1",
     "gulp-concat": "^2.5.2",
     "gulp-connect": "^2.2.0",
     "gulp-cssmin": "^0.1.7",
@@ -20,12 +22,11 @@
     "gulp-htmlmin": "^1.1.1",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^1.0.1",
-    "gulp-load-plugins": "^0.10.0",
     "gulp-preprocess": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-requirejs-optimize": "^0.1.3",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.2.0",
-    "gulp-wrapper": "^1.0.0",
     "imagemin-pngquant": "^4.0.0",
     "run-sequence": "^1.1.0",
     "yargs": "^3.8.0"
