--- a/package.json
+++ b/package.json
@@ -7,28 +7,23 @@
     "test": "mocha --recursive"
   },
   "devDependencies": {
-    "babel-core": "^6.3.26",
+    "babel-core": "^6.4.0",
+    "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
+    "backbone": "^1.2.3",
     "bower": "*",
     "del": "^1.1.1",
-    "gulp": "^3.9.0",
-    "gulp-add-src": "^0.2.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-babel": "^6.1.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-connect": "^2.2.0",
-    "gulp-cssmin": "^0.1.7",
-    "gulp-handlebars": "^4.0.0",
-    "gulp-htmlmin": "^1.1.1",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^1.0.1",
-    "gulp-preprocess": "^1.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-requirejs-optimize": "^0.1.3",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.2.0",
+    "exports-loader": "^0.6.2",
+    "handlebars": "^4.0.5",
+    "handlebars-loader": "^1.1.4",
+    "i18n-webpack-plugin": "^0.2.7",
     "imagemin-pngquant": "^4.0.0",
+    "imports-loader": "^0.6.5",
+    "jquery": "^2.2.0",
+    "json-loader": "^0.5.4",
     "run-sequence": "^1.1.0",
+    "underscore": "^1.8.3",
+    "webpack": "^1.12.10",
     "yargs": "^3.8.0"
   }
 }
