--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
-    "backbone": "^1.2.3",
     "bower": "*",
     "del": "^1.1.1",
     "exports-loader": "^0.6.2",
-    "handlebars": "^4.0.5",
     "handlebars-loader": "^1.1.4",
-    "i18n-webpack-plugin": "^0.2.7",
     "imagemin-pngquant": "^4.0.0",
     "imports-loader": "^0.6.5",
-    "jquery": "^2.2.0",
     "json-loader": "^0.5.4",
     "run-sequence": "^1.1.0",
-    "underscore": "^1.8.3",
     "webpack": "^1.12.10",
     "yargs": "^3.8.0"
+  },
+  "dependencies": {
+    "backbone": "^1.2.3",
+    "hammerjs": "^2.0.6",
+    "handlebars": "^4.0.5",
+    "keymaster": "^1.6.2",
+    "jquery": "^2.2.0",
+    "moment": "^2.11.1",
+    "underscore": "^1.8.3"
   }
 }
