--- a/app/.htaccess
+++ b/app/.htaccess
@@ -46,10 +46,10 @@ FileETag None
     ExpiresByType text/html                             "access plus 0 seconds"
 
   # JavaScript
-    ExpiresByType application/javascript                "access plus 1 day"
+    ExpiresByType application/javascript                "access plus 1 month"
 
   # CSS
-    ExpiresByType text/css                              "access plus 1 day"
+    ExpiresByType text/css                              "access plus 1 month"
 
   # Manifest files
     ExpiresByType application/manifest+json             "access plus 1 year"
