--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "clean-css": "^3.4.9",
-    "del": "^1.1.1",
     "exports-loader": "^0.6.2",
     "handlebars-loader": "^1.1.4",
     "hashmark": "^3.1.0",
     "htmlprocessor": "^0.2.1",
     "imagemin-pngquant": "^4.0.0",
     "imports-loader": "^0.6.5",
-    "injectassets": "^1.0.5",
     "json-loader": "^0.5.4",
     "live-reload": "^1.1.0",
     "parallelshell": "^2.0.0",
@@ -24,8 +22,7 @@
     "rimraf": "^2.2.8",
     "run-sequence": "^1.1.0",
     "watch": "^0.17.1",
-    "webpack": "^1.12.10",
-    "yargs": "^3.8.0"
+    "webpack": "^1.12.10"
   },
   "dependencies": {
     "backbone": "^1.2.3",
@@ -36,39 +33,40 @@
     "moment": "^2.11.1",
     "underscore": "^1.8.3"
   },
+  "config": {
+    "debug": false
+  },
   "scripts": {
     "test": "mocha --recursive",
 
     "clean": "rimraf dist/*",
 
-    "precopy": "npm run clean -s && mkdir dist/img && mkdir dist/font && mkdir dist/pictures",
+    "precopy": "npm run clean -s && mkdir -p dist/img && mkdir -p dist/font && mkdir -p dist/pictures",
     "copy": "npm run copy:images -s && npm run copy:fonts -s && npm run copy:misc -s && npm run copy:pictures -s",
     "copy:images": "cp app/img/* dist/img",
     "copy:pictures": "cp app/pictures/empty* dist/pictures",
     "copy:fonts": "cp app/font/* dist/font",
     "copy:misc": "cp app/index.php dist/ && cp app/.htaccess dist/ && cp app/favicon.ico dist/ && cp app/robots.txt dist/ && cp app/manifest.* dist/ && cp app/js/analytics.js dist/",
 
-    "prebuild": "mkdir dist/css",
-    "build": "npm run build:scripts -s && npm run build:styles -s && npm run build:markup -s",
-    "build:debug": "npm run build:scripts:debug -s && npm run build:styles -s && npm run build:markup:debug -s",
-    "build:scripts": "webpack -p",
-    "build:scripts:debug": "webpack -d",
+    "prebuild": "npm run copy",
+    "prebuild:styles": "mkdir -p dist/css",
+    "build": "npm run build:scripts -s -- -d && npm run build:styles -s && npm run build:markup -- -e dev",
+    "build:scripts": "webpack",
     "build:styles": "cleancss --skip-rebase app/css/*.css -o dist/css/main.css",
-    "build:markup": "htmlprocessor -e dist app/index.html -o dist/index.html",
-    "build:markup:debug": "htmlprocessor -e dev app/index.html -o dist/index.html",
+    "build:markup": "htmlprocessor app/index.html -o dist/index.html",
 
     "cachebuster": "hashmark -l 8 --cwd dist {js,css}/*.{js,css} '{dir}/{name}{hash}{ext}' | replaceinfiles -s 'dist/index.html' -d '{dir}/{base}'",
     "postcachebuster": "rimraf dist/js/wallblog.js && rimraf dist/css/main.css",
 
-    "live-reload": "live-reload --port 9091 dist/",
+    "live-reload": "live-reload --port=9091 --delay=100 dist/",
 
     "watch": "parallelshell \"npm run watch:scripts\" \"npm run watch:styles\"",
-    "watch:scripts": "webpack --watch",
+    "watch:scripts": "webpack -d --watch",
     "watch:styles": "watch \"npm run build:styles\" app/css/",
 
-    "predev": "npm run copy -s && npm run build:debug -s",
+    "predev": "npm run build -s",
     "dev": "parallelshell \"npm run watch\" \"npm run live-reload\"",
 
-    "package": "npm run copy -s && npm run build -s && npm run cachebuster -s"
+    "package": "npm run copy -s && npm run build:scripts -s -- -p && npm run build:styles -s && npm run build:markup -s -- -e dist && npm run cachebuster -s"
   }
 }
