--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "silex/silex": "~1.3",
     "monolog/monolog": "^1.17",
     "doctrine/dbal": "^2.5",
-    "twig/twig": "^1.24"
+    "twig/twig": "^1.24",
+    "symfony/browser-kit": "^3.0"
   }
 }
