Added like system on items

--- a/app/font/config.json
+++ b/app/font/config.json
@@ -47,6 +47,18 @@
       "css": "comment",
       "code": 99,
       "src": "typicons"
+    },
+    {
+      "uid": "d73eceadda1f594cec0536087539afbf",
+      "css": "heart",
+      "code": 59392,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "f3dc2d6d8fe9cf9ebff84dc260888cdf",
+      "css": "heart-empty",
+      "code": 59393,
+      "src": "fontawesome"
     }
   ]
 }
