docker nginx website in https

--- a/docker/config/nginx.conf
+++ b/docker/config/nginx.conf
@@ -1,5 +1,10 @@
 server {
-  listen                *:80;
+  listen 443 ssl;
+
+  server_name wallblog.local;
+
+  ssl_certificate /etc/nginx/ssl/wallblog.local.crt;
+  ssl_certificate_key /etc/nginx/ssl/wallblog.local.key;
 
   access_log            /var/log/nginx/wallblog.access.log;
   error_log             /var/log/nginx/wallblog.error.log;
@@ -27,4 +32,10 @@ server {
   location / {
     try_files $uri $uri/ /index.html;
   }
+}
+
+server {
+    listen 80;
+    server_name wallblog.local;
+    return 301 https://$host$request_uri;
 }
