--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -29,9 +29,10 @@ RUN apt-key adv --keyserver hkp://pgp.mit.edu:80 --recv-keys 573BFD6B3D8FBC64107
 RUN rm /etc/nginx/conf.d/default.conf
 RUN echo "daemon off;" >> /etc/nginx/nginx.conf
 COPY ./config/nginx.conf /etc/nginx/conf.d/wallblog.conf
+RUN mkdir /etc/nginx/ssl/ && openssl req -new -nodes -x509 -subj "/C=FR/ST=France/L=Lyon/O=FR/CN=wallblog.local" -days 3650 -keyout /etc/nginx/ssl/wallblog.local.key -out /etc/nginx/ssl/wallblog.local.crt -extensions v3_ca
 
 # Node.js
-RUN curl -sL https://deb.nodesource.com/setup_5.x | bash - && apt-get install -y nodejs
+RUN curl -sL https://deb.nodesource.com/setup_6.x | bash - && apt-get install -y nodejs
 
 # Git
 RUN apt-get update && apt-get install -y git
