--- a/app/manifest.json
+++ b/app/manifest.json
@@ -24,5 +24,5 @@
   "background_color": "#FFFFFF",
   "theme_color": "#83C22A",
   "display": "standalone",
-  ​"orientation": "portrait-primary"
+  "orientation": "portrait-primary"
 }
