--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+  "blogTitle": "The Wallblog",
   "websiteUrl": "https://wallblog.local",
   "notificationTitle": "Wallblog",
   "vapidPublicKey": "ahahahahahahahahahah",
