Update service worker the good way

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "blogTitle": "The Wallblog",
   "websiteUrl": "https://wallblog.local",
-  "notificationTitle": "Wallblog",
+  "notificationTitle": "The Wallblog",
   "vapidPublicKey": "ahahahahahahahahahah",
   "vapidEmail": "noone@nowhere.com",
   "vapidPrivateKey": "behbehbehbehbehbeh"
