--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,13 @@
   },
   "require": {
     "silex/silex": "~1.3",
-    "monolog/monolog": "^1.17",
-    "doctrine/dbal": "^2.5",
-    "twig/twig": "^1.24",
-    "symfony/browser-kit": "^3.0",
-    "minishlink/web-push": "^1.3"
+    "monolog/monolog": "^1.23",
+    "doctrine/dbal": "^2.8",
+    "twig/twig": "^1.35",
+    "symfony/browser-kit": "^3.4",
+    "minishlink/web-push": "^1.4.3"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "5.*"
   }
 }
