Switch from Silex to Symfony 4 (and flex)

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,14 @@ logs/
 vendor/
 bin/
 dist/
-src/config.jops.php
+var/
+__src/config.jops.php
 app/pictures/20*
 app/videos/*
 app/js/analytics.js
 app/js/config.js
-tests/app.log
+__tests
+__src
+__views
 assets.json
 *.iml
