--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,67 @@
 {
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "config": {
-    "bin-dir": "bin"
-  },
-  "require": {
-    "silex/silex": "~1.3",
-    "monolog/monolog": "^1.23",
-    "doctrine/dbal": "^2.8",
-    "twig/twig": "^1.35",
-    "symfony/browser-kit": "^3.4",
-    "minishlink/web-push": "^1.4.3"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "5.*"
-  }
+    "type": "project",
+    "license": "proprietary",
+    "require": {
+        "php": "^7.1.3",
+        "ext-ctype": "*",
+        "ext-exif": "^7.1",
+        "ext-gd": "^7.1",
+        "ext-iconv": "*",
+        "ext-json": "^1.5",
+        "symfony/console": "*",
+        "symfony/flex": "^1.1",
+        "symfony/framework-bundle": "*",
+        "symfony/orm-pack": "^1.0",
+        "symfony/twig-bundle": "*",
+        "symfony/yaml": "*"
+    },
+    "require-dev": {
+        "symfony/dotenv": "*"
+    },
+    "config": {
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
+    "replace": {
+        "paragonie/random_compat": "2.*",
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php71": "*",
+        "symfony/polyfill-php70": "*",
+        "symfony/polyfill-php56": "*"
+    },
+    "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        },
+        "post-install-cmd": [
+            "@auto-scripts"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
+        ]
+    },
+    "conflict": {
+        "symfony/symfony": "*"
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "4.1.*"
+        },
+        "public-dir": "dist"
+    }
 }
