--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "*",
         "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "*",
         "symfony/twig-bundle": "*",
         "symfony/yaml": "*"
     },
