--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -9,6 +9,20 @@ item_get:
   requirements:
     id: '\d+'
 
+item_comments:
+  path: /api/item/{id}/comments
+  controller: App\Controller\CommentController::getByItemId
+  methods: GET
+  requirements:
+    id: '\d+'
+
+item_likes:
+  path: /api/item/{id}/likes
+  controller: App\Controller\LikeController::getByItem
+  methods: GET
+  requirements:
+    id: '\d+'
+
 item_delete:
   path: /api/item/{id}
   controller: App\Controller\ItemController::delete
@@ -31,6 +45,40 @@ picture_add:
   controller: App\Controller\ItemController::add
   methods: POST
 
+comment_add:
+  path: /api/item/{id}/comments
+  controller: App\Controller\CommentController::add
+  methods: POST
+  requirements:
+    id: '\d+'
+
+comment_delete:
+  path: /api/item/{id}/comments/{idComment}
+  controller: App\Controller\CommentController::delete
+  methods: DELETE
+  requirements:
+    id: '\d+'
+    idComment: '\d+'
+
+like_add:
+  path: /api/item/{id}/likes
+  controller: App\Controller\LikeController::add
+  methods: POST
+  requirements:
+    id: '\d+'
+
+like_delete:
+  path: /api/item/{id}/likes/{idLike}
+  controller: App\Controller\LikeController::delete
+  methods: DELETE
+  requirements:
+    id: '\d+'
+    idLike: '\d+'
+
 login:
   path: /auth/login
   controller: App\Controller\SecurityController::login
+
+logout:
+  path: /auth/logout
+  controller: App\Controller\SecurityController::logout
