--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
         "ext-iconv": "*",
         "ext-json": "^1.5",
         "symfony/console": "*",
+        "symfony/dotenv": "*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "*",
+        "symfony/monolog-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "*",
         "symfony/twig-bundle": "*",
-        "symfony/yaml": "*",
-        "symfony/dotenv": "*"
+        "symfony/yaml": "*"
     },
     "config": {
         "preferred-install": {
