Set up one functionnal test

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,12 @@ app/pictures/20*
 app/videos/*
 app/js/analytics.js
 app/js/config.js
-tests
 __src
 __views
 assets.json
 *.iml
+
+###> symfony/phpunit-bridge ###
+.phpunit
+/phpunit.xml
+###< symfony/phpunit-bridge ###
