Provide 192px icon for Desktop PWA

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -15,6 +15,11 @@
       "sizes": "144x144"
     },
     {
+      "src": "/img/icon-192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
       "src": "/img/icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
