--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@types/enzyme-adapter-react-16": "^1.0.3",
-    "@types/react-redux": "^6.0.9",
     "autoprefixer": "7.1.6",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
@@ -30,6 +29,8 @@
     "react-dom": "^16.6.1",
     "react-redux": "^5.1.0",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.19.0",
@@ -58,6 +59,8 @@
     "@types/node": "^10.12.4",
     "@types/react": "^16.7.1",
     "@types/react-dom": "^16.0.9",
+    "@types/react-redux": "^6.0.10",
+    "@types/redux-logger": "^3.0.6",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "react-addons-test-utils": "^15.6.2",
